# phile

./: .gitignore  Cargo.toml  README.md  build.rs
aws/: aws.env.example  deploy.sh  setup.sh
phile-inject/: Cargo.toml
phile-inject/src/: main.rs
src/: clap_utils.rs  main.rs
src/engine/: mod.rs  token_output_stream.rs
src/models/: gemma.rs  loader.rs  mod.rs  phi.rs
templates/: gemma.j2  phi.j2
